samples/_failures_safe/1761289065_eef6d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b3452db.c: In function ‘main’:
./samples/SAFE/__tmp_0b3452db.c:141:5: error: expected expression at end of input
  141 |     long c = strtol(buffer, &endptr,
      |     ^~~~
./samples/SAFE/__tmp_0b3452db.c:141:5: error: expected declaration or statement at end of input
